[package]
name = "iced_palace"
description = "A royal collection of exquisite widgets and helpers to rule your iced kingdom"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
geometry = ["iced_widget/canvas"]
macros = ["iced_palace_macros"]

[dependencies]
iced_core.workspace = true
iced_widget.workspace = true
num-traits.workspace = true

iced_palace_macros.workspace = true
iced_palace_macros.optional = true

rand.workspace = true
rand.features = ["thread_rng"]
rand.optional = true

[workspace]
members = [
  "macros",
  "examples/*",
]

[workspace.package]
version = "0.15.0-dev"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/hecrj/iced_palace"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
rust-version = "1.85"

[workspace.dependencies]
iced_palace = { version = "0.15.0-dev", path = "." }
iced_palace_macros = { version = "0.15.0-dev", path = "./macros" }

iced = "0.15.0-dev"
iced_core = "0.15.0-dev"
iced_widget = "0.15.0-dev"

num-traits = "0.2"
quote = "1"
syn = "2"

rand.version = "0.9"
rand.default-features = false

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"

iced_core.git = "https://github.com/iced-rs/iced.git"

iced_widget.git = "https://github.com/iced-rs/iced.git"

# For testing new bleeding edge iced features
# iced.path = "../../iced"
# iced_core.path = "../../iced/core"
# iced_widget.path = "../../iced/widget"
